force-app/main/default/objects/Concrete_Curb_Evaluation__c/Concrete_Curb_Evaluation__c.object-meta.xml
<CustomObject>
    <label>Concrete Curb Evaluation</label>
    <nameField>
        <label>Concrete Curb Evaluation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Concrete Curb Evaluations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>