force-app/main/default/objects/Concrete_Curb_Evaluation__c/fields/Are_there_Unusual_Curb_Details__c.field-meta.xml
<CustomField>
    <fullName>Are_there_Unusual_Curb_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are there Unusual Curb Details?</label>
    <type>Checkbox</type>
</CustomField>