force-app/main/default/objects/Concrete_Curb_Evaluation__c/fields/Concrete_PSI__c.field-meta.xml
<CustomField>
    <fullName>Concrete_PSI__c</fullName>
    <label>Concrete PSI</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>gpvsConcrete_Mix</valueSetName>
    </valueSet>
</CustomField>