force-app/main/default/objects/Concrete_Curb_Evaluation__c/fields/Curb_Size__c.field-meta.xml
<CustomField>
    <fullName>Curb_Size__c</fullName>
    <label>Curb Size</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6x8x18</fullName>
            </value>
            <value>
                <fullName>8x9x18</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>