force-app/main/default/objects/Concrete_Curb_Evaluation__c/fields/Is_Special_Equipment_Needed__c.field-meta.xml
<CustomField>
    <fullName>Is_Special_Equipment_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Special Equipment Needed?</label>
    <type>Checkbox</type>
</CustomField>