force-app/main/default/objects/Concrete_Curb_Evaluation__c/fields/LF_of_ADA_Ramp__c.field-meta.xml
<CustomField>
    <fullName>LF_of_ADA_Ramp__c</fullName>
    <label>LF of ADA Ramp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>