force-app/main/default/objects/Concrete_Curb_Evaluation__c/fields/LF_of_Concrete_Curb__c.field-meta.xml
<CustomField>
    <fullName>LF_of_Concrete_Curb__c</fullName>
    <label>LF of Concrete Curb</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>