force-app/main/default/objects/Concrete_Curb_Evaluation__c/fields/No_Catch_Basin_to_Elevate__c.field-meta.xml
<CustomField>
    <fullName>No_Catch_Basin_to_Elevate__c</fullName>
    <label># of Catch Basins to Elevate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>