force-app/main/default/objects/Concrete_Curb_Evaluation__c/fields/Proposal_Discovery__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Discovery__c</fullName>
    <label>Proposal Discovery</label>
    <referenceTo>Proposal_Discovery__c</referenceTo>
    <relationshipLabel>Concrete Curb Evaluations</relationshipLabel>
    <relationshipName>Concrete_Curb_Evaluations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>