force-app/main/default/objects/Concrete_Curb_Evaluation__c/fields/Soil_Under_Curb__c.field-meta.xml
<CustomField>
    <fullName>Soil_Under_Curb__c</fullName>
    <label>Soil Under Curb</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sub_Soil</valueSetName>
    </valueSet>
</CustomField>