force-app/main/default/objects/Concrete_Curb_Evaluation__c/fields/Special_Equipment_Needed__c.field-meta.xml
<CustomField>
    <fullName>Special_Equipment_Needed__c</fullName>
    <label>Special Equipment Needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>