force-app/main/default/objects/Concrete_Curb_Evaluation__c/fields/Unusual_Curb_Details__c.field-meta.xml
<CustomField>
    <fullName>Unusual_Curb_Details__c</fullName>
    <label>Unusual Curb Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>